2010-02-10  John W. Eaton  <jwe@octave.org>

	* data.cc: Include <sys/times.h>.  Define HZ if it is not defined.

2010-02-10  John W. Eaton  <jwe@octave.org>

	* graphics.cc (base_properties::set_children): Ensure that new
	children are stored as a column vector.

	* syscalls.cc (Fdup2, Fexec, Fpopen2, Ffork, Fgetpgrp, Fgetpid,
	Fgetppid, Fgetegid, Fgetgid, Fgeteuid, Fkill, Ffstat, Flstat,
	Fpipe, Fstat, Fwaitpid): Use DEFUNX instead of DEFUN.

2010-02-10  David Grundberg  <davidg@cs.umu.se>

	* DLD-FUNCTIONS/__magick_read__.cc (read_images): Reimplement
	copying with direct fortran_vec manipulation, avoiding indexing
	operations.  Replace scale_quantum_to_depth calls with simple
	arithmetics.
	(scale_quantum_to_depth): Remove function.

2010-02-10  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/bsxfun.cc (Fbsxfun): Remove redundant test. Add
	explanation.

2010-02-10  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base.h (octave_base_value::is_list): Remove.
	* ov.h (octave_value::is_list): Remove.
	* data.cc (Fislist): Remove.
	* oct-stream.cc (printf_value_cache::printf_value_cache): Don't call
	is_list.

2010-02-10  Jaroslav Hajek  <highegg@gmail.com>

	* ov-str-mat.h (octave_char_matrix_str::is_real_type): Delete
	overload.
	* data.cc (Fisreal): Improve docs.

2010-02-10  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Fisnumeric): Improve documentation.
	(Fismatrix): Ditto.

2010-02-09  John W. Eaton  <jwe@octave.org>

	* graphics.cc, graphics.h.in
	(base_properties::get_hidden_children): New function.
	(base_properties::get_children_internal): New function.
	(base_properties::get_children): Call get_children_internal to
	do the work.
	(base_properties::set_children): Incorporate maybe_set_children
	function here.  Account for hidden children.
	(maybe_set_children): Delete.

	* c-file-ptr-stream.h (c_file_ptr_buf::buf_close): Rename from close.
	(c_file_ptr_buf::file_close): Rename from fclose.
	(c_file_ptr_stream::stream_close): Rename from close.